Static bounds per season daterange

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-VUE_APP_TITLE=Michael-Otto-Institut im NABU in Bergenhusen - Weißstörche
-VUE_APP_BIRDS=./config/whitestorks.json
-VUE_APP_SEASONS=./config/whitestorks_seasons.json
+#VUE_APP_TITLE=Michael-Otto-Institut im NABU in Bergenhusen - Weißstörche
+#VUE_APP_BIRDS=./config/whitestorks.json
+#VUE_APP_SEASONS=./config/whitestorks_seasons.json
 
-#VUE_APP_TITLE=NABU Hamburg - Weißstörche
-#VUE_APP_BIRDS=./config/whitestorks_hamburg.json
-#VUE_APP_SEASONS=./config/whitestorks_hamburg_seasons.json
+VUE_APP_TITLE=NABU Hamburg - Weißstörche
+VUE_APP_BIRDS=./config/whitestorks_hamburg.json
+VUE_APP_SEASONS=./config/whitestorks_hamburg_seasons.json
 
 #VUE_APP_TITLE=NABU - Turteltauben
 #VUE_APP_BIRDS=./config/turtledoves.json
@@ -14,6 +14,6 @@ VUE_APP_SEASONS=./config/whitestorks_seasons.json
 #VUE_APP_BIRDS=./config/zwergschwan.json
 #VUE_APP_SEASONS=./config/zwergschwan_seasons.json
 
-VUE_APP_TITLE=Säbelschnäbler
-VUE_APP_BIRDS=./config/saebelschnaebler.json
-VUE_APP_SEASONS=./config/saebelschnaebler_seasons.json
+#VUE_APP_TITLE=Säbelschnäbler
+#VUE_APP_BIRDS=./config/saebelschnaebler.json
+#VUE_APP_SEASONS=./config/saebelschnaebler_seasons.json
