zwergschwan: add season 24/25

--- a/.env
+++ b/.env
@@ -2,17 +2,17 @@
 #VUE_APP_BIRDS=./config/whitestorks.json
 #VUE_APP_SEASONS=./config/whitestorks_seasons.json
 
-VUE_APP_TITLE=NABU Hamburg - Weißstörche
-VUE_APP_BIRDS=./config/whitestorks_hamburg.json
-VUE_APP_SEASONS=./config/whitestorks_hamburg_seasons.json
+#VUE_APP_TITLE=NABU Hamburg - Weißstörche
+#VUE_APP_BIRDS=./config/whitestorks_hamburg.json
+#VUE_APP_SEASONS=./config/whitestorks_hamburg_seasons.json
 
 #VUE_APP_TITLE=NABU - Turteltauben
 #VUE_APP_BIRDS=./config/turtledoves.json
 #VUE_APP_SEASONS=./config/turtledoves_seasons.json
 
-#VUE_APP_TITLE=Zwergschwäne auf Reisen - Projekt Zwergschwan
-#VUE_APP_BIRDS=./config/zwergschwan.json
-#VUE_APP_SEASONS=./config/zwergschwan_seasons.json
+VUE_APP_TITLE=Zwergschwäne auf Reisen - Projekt Zwergschwan
+VUE_APP_BIRDS=./config/zwergschwan.json
+VUE_APP_SEASONS=./config/zwergschwan_seasons.json
 
 #VUE_APP_TITLE=Säbelschnäbler
 #VUE_APP_BIRDS=./config/saebelschnaebler.json
