--- a/src/config/whitestorks_hamburg_seasons.json
+++ b/src/config/whitestorks_hamburg_seasons.json
@@ -2,47 +2,134 @@
     {
         "action": "mdi-crosshairs-gps",
         "active": true,
-        "title": "2023 / 2024",
-        "defaultDaterangeDays": 60,
+        "title": "2024 / 2025",
+        "defaultDaterangeStart": "2024-08-01",
         "daterange": [],
         "turtledoves": [
             {
                 "active": true,
                 "color": "#ffff01",
-                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-02-2023_2024.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-02-2024_2025.csv",
                 "name": "Alexander",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#66642B",
-                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-09-2023_2024.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-09-2024_2025.csv",
                 "name": "Christian-Eike",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#0b7ac1",
-                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-05-2023_2024.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-05-2024_2025.csv",
                 "name": "Hanne",
                 "opacity": 1
             },
             {
                 "active": true,
                 "color": "#8102b3",
-                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-03-2023_2024.csv",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-03-2024_2025.csv",
                 "name": "Jan",
                 "opacity": 1
             },
             {
                 "active": true,
+                "color": "#CFCF63",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-08-2024_2025.csv",
+                "name": "Michael",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#de2c12",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-13-2024_2025.csv",
+                "name": "Pepe",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#7cdeff",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-14-2024_2025.csv",
+                "name": "Tobias",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#6d6d6d",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-15-2024_2025.csv",
+                "name": "Volker",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#df57b7",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-16-2024_2025.csv",
+                "name": "Peter",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#12e399",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-17-2024_2025.csv",
+                "name": "Marco",
+                "opacity": 1
+            },
+            {
+                "active": true,
+                "color": "#514447",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-18-2024_2025.csv",
+                "name": "Hermann",
+                "opacity": 1
+            }
+        ]
+    },
+    {
+        "action": "mdi-crosshairs-gps",
+        "active": false,
+        "title": "2023 / 2024",
+        "defaultDaterangeStart": "2023-08-01",
+        "defaultDaterangeEnd": "2024-07-31",
+        "daterange": [],
+        "turtledoves": [
+            {
+                "active": false,
+                "color": "#ffff01",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-02-2023_2024.csv",
+                "name": "Alexander",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#66642B",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-09-2023_2024.csv",
+                "name": "Christian-Eike",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#0b7ac1",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-05-2023_2024.csv",
+                "name": "Hanne",
+                "opacity": 1
+            },
+            {
+                "active": false,
+                "color": "#8102b3",
+                "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-03-2023_2024.csv",
+                "name": "Jan",
+                "opacity": 1
+            },
+            {
+                "active": false,
                 "color": "#FF7F00",
                 "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-06-2023_2024.csv",
                 "name": "Jürgen",
                 "opacity": 1
             },
             {
-                "active": true,
+                "active": false,
                 "color": "#CFCF63",
                 "data": "data/whitestorks-hamburg/WhiteStork-Hamburg-08-2023_2024.csv",
                 "name": "Michael",
@@ -54,7 +141,6 @@
         "action": "mdi-crosshairs-gps",
         "active": false,
         "title": "2022 / 2023",
-        "defaultDaterangeDays": 60,
         "defaultDaterangeStart": "2022-08-01",
         "defaultDaterangeEnd": "2023-07-31",
         "daterange": [],
@@ -114,7 +200,6 @@
         "action": "mdi-crosshairs-gps",
         "active": false,
         "title": "2021 / 2022",
-        "defaultDaterangeDays": 60,
         "defaultDaterangeStart": "2021-08-01",
         "defaultDaterangeEnd": "2022-07-31",
         "daterange": [],
@@ -188,7 +273,6 @@
         "action": "mdi-crosshairs-gps",
         "active": false,
         "title": "2020 / 2021",
-        "defaultDaterangeDays": 60,
         "defaultDaterangeStart": "2020-08-01",
         "defaultDaterangeEnd": "2021-07-31",
         "daterange": [],
@@ -283,7 +367,6 @@
         "action": "mdi-crosshairs-gps",
         "active": false,
         "title": "2019 / 2020",
-        "defaultDaterangeDays": 60,
         "defaultDaterangeStart": "2019-08-01",
         "defaultDaterangeEnd": "2020-07-31",
         "daterange": [],
