--- a/src/config/zwergschwan_seasons.json
+++ b/src/config/zwergschwan_seasons.json
@@ -1,7 +1,7 @@
 [
   {
     "action": "mdi-crosshairs-gps",
-    "active": false,
+    "active": true,
     "title": "2024/2025",
     "defaultDaterangeDays": 60,
     "daterange": [],
