zwergschwan: Add new birds
TODO:
  - add correct avatar pictures
  - add correct names

--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@
 #VUE_APP_BIRDS=./config/turtledoves.json
 #VUE_APP_SEASONS=./config/turtledoves_seasons.json
 
-#VUE_APP_TITLE=Zwergschwäne auf Reisen - Projekt Zwergschwan
-#VUE_APP_BIRDS=./config/zwergschwan.json
-#VUE_APP_SEASONS=./config/zwergschwan_seasons.json
+VUE_APP_TITLE=Zwergschwäne auf Reisen - Projekt Zwergschwan
+VUE_APP_BIRDS=./config/zwergschwan.json
+VUE_APP_SEASONS=./config/zwergschwan_seasons.json
 
-VUE_APP_TITLE=Säbelschnäbler
-VUE_APP_BIRDS=./config/saebelschnaebler.json
-VUE_APP_SEASONS=./config/saebelschnaebler_seasons.json
+#VUE_APP_TITLE=Säbelschnäbler
+#VUE_APP_BIRDS=./config/saebelschnaebler.json
+#VUE_APP_SEASONS=./config/saebelschnaebler_seasons.json
